# LumiPath

./: PLAN.md  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  graph.py  llm.py  mcp_server.py  state.py
backend/app/agents/memory/: __init__.py  base.py  episodic.py  in_context.py  long_term.py  manager.py  procedural.py  semantic.py  short_term.py  summary.py
backend/app/agents/nodes/: __init__.py  interview_agent.py  memory_agent.py  notes_agent.py  okr_agent.py  supervisor.py
backend/app/agents/skills/: okr-agent.md
backend/app/agents/tools/: __init__.py  analyze_okr.py  analyze_status.py  base.py  create_summary.py  daily_note_assistant.py  generate_report.py  generate_review.py  get_note_by_date.py  list_interviews.py  list_notes.py  search_notes.py  search_questions.py  suggest_tasks.py
backend/app/agents/utils/: llm_client.py
backend/app/api/v1/: agent.py  auth.py  interviews.py  notes.py  okr.py  router.py  users.py
backend/app/core/: deps.py  exceptions.py  rbac.py  security.py
backend/app/db/: __init__.py  engine.py  neo4j.py  redis.py  session.py
backend/app/models/: __init__.py  agent.py  base.py  event.py  interview.py  llm_key.py  memory.py  note.py  okr.py  user.py  vault.py
backend/app/schemas/: agent.py  auth.py  interview.py  note.py  okr.py  user.py
backend/app/services/: auth_service.py  interview_service.py  notes_service.py  okr_service.py  vault_sync.py
backend/app/websocket/: manager.py
backend/app/workers/: agent_worker.py  celery_app.py  embedding_worker.py  vault_watcher.py  vault_watcher_main.py
backend/migrations/: env.py
backend/migrations/versions/: 001_init_extensions.py  002_users_rbac.py  003_user_secrets.py  004_companies_interviews.py  005_okr.py  006_notes_vault.py  007_agent_memory.py  008_events_idempotency.py  009_seed.py  010_widen_okr_quarter.py
(+54 files in other folders)
